kubernetes/apps/apps/tunnel/harbor/access/remote-access.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app harbor-remote-access
  labels:
    # app.kubernetes.io/name: *app
    # app.kubernetes.io/instance: *app
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik-external
  rules:
    - host: &host harbor.icylair.com
      http:
        paths:
        - backend:
            service:
              name: harbor-core-custom
              port:
                name: http-web
          path: /api/
          pathType: Prefix
        - backend:
            service:
              name: harbor-core-custom
              port:
                name: http-web
          path: /service/
          pathType: Prefix
        - backend:
            service:
              name: harbor-core-custom
              port:
                name: http-web
          path: /v2/
          pathType: Prefix
        - backend:
            service:
              name: harbor-core-custom
              port:
                name: http-web
          path: /c/
          pathType: Prefix
        - backend:
            service:
              name: harbor-portal-custom
              port:
                name: http-web
          path: /
          pathType: Prefix
    - host: &host2 harbor.cloud.icylair.com
      http:
        paths:
        - backend:
            service:
              name: harbor-core-custom
              port:
                name: http-web
          path: /api/
          pathType: Prefix
        - backend:
            service:
              name: harbor-core-custom
              port:
                name: http-web
          path: /service/
          pathType: Prefix
        - backend:
            service:
              name: harbor-core-custom
              port:
                name: http-web
          path: /v2/
          pathType: Prefix
        - backend:
            service:
              name: harbor-core-custom
              port:
                name: http-web
          path: /c/
          pathType: Prefix
        - backend:
            service:
              name: harbor-portal-custom
              port:
                name: http-web
          path: /
          pathType: Prefix
  tls:
  - hosts:
      - *host
      - *host2
    secretName: icylair-com-all-prod
---
kind: Service
apiVersion: v1
metadata:
  name: &name harbor-core-custom
  labels:
    service-type: ingress
  annotations:
    service.cilium.io/affinity: "remote"
    service.cilium.io/global: "true"
    traefik.ingress.kubernetes.io/service.nativelb: "true"
spec:
  # type: LoadBalancer
  # selector:
    # app: ai-stack
  ports:
    - name: http-web
      port: 80
      protocol: TCP
      targetPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: &name harbor-portal-custom
  labels:
    service-type: ingress
  annotations:
    service.cilium.io/affinity: "remote"
    service.cilium.io/global: "true"
    traefik.ingress.kubernetes.io/service.nativelb: "true"
spec:
  # type: LoadBalancer
  # selector:
    # app: ai-stack
  ports:
    - name: http-web
      port: 80
      protocol: TCP
      targetPort: 8080
